--- a/index.html
+++ b/index.html
@@ -329,8 +329,7 @@
           setTimeout(() => {
             petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
             setTimeout(() => {
-              foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';
-              litterbox.style.display = 'none';
+              foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';        
               isBusy = false;
             }, 500);
           }, 500);
@@ -421,19 +420,53 @@ function goToLitterbox() {
   petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
   backgroundX = 0;
   container.style.backgroundPositionX = backgroundX + '%';
-  const litterbox = document.getElementById('litterbox');
-  litterbox.style.display = 'inline';
-  litterbox.style.left = '-20%';
+  const box = document.getElementById('litterbox');
+  box.style.display = 'inline';
+  box.style.left = '-20%';
   setTimeout(() => {
-    litterbox.style.transition = 'left 0.5s ease';
-    litterbox.style.left = 'calc(0% + 180px)';
+    box.style.transition = 'left 0.5s ease';
+    box.style.left = 'calc(0% + 180px)';
     setTimeout(() => {
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      foodBowl.style.display = 'none';
-      feeder.style.display = 'none';
-      isBusy = false;
-    }, 1000);
-  }, 50);
+
+      //shake
+      const sequence = [
+    { direction: 'left', delta: -1 },
+    { direction: 'right', delta: 1 },
+    { direction: 'left', delta: -1 },
+    { direction: 'right', delta: 1 },
+    { direction: 'left', delta: -1 },
+    { direction: 'right', delta: 1 },
+  ];
+
+  sequence.forEach((step, i) => {
+    setTimeout(() => {
+      petImage.src = `https://abblake89.github.io/ferro-pets/assets/Ferro_${step.direction}.png`;
+      backgroundX = Math.min(100, Math.max(0, backgroundX + step.delta));
+      container.style.backgroundPositionX = backgroundX + '%';
+    }, i * 150);
+  });
+
+  setTimeout(() => {
+    petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+    isBusy = false;
+  }, sequence.length * 150);
+
+
+
+
+      
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
+        backgroundX = 50;
+        container.style.backgroundPositionX = backgroundX + '%';
+        box.style.left = '-20%';
+        setTimeout(() => {
+          petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+          isBusy = false;
+        }, 500);
+      }, 2000);
+    }, 2000); //length of delay after Ferro gets to litterbox before shaking
+  }, 50); //length of delay before litterbox starts moving onto the screen
 }
 
 </script>
