--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
               }
 			  else if (text === 'FerroBarrel') {
 				const ferroLeft = petImage.offsetLeft;
-				const barrelRight = ferroLeft - 20;
+				const barrelRight = ferroLeft + 20;
 				barrelImage.style.right = `${barrelRight}px`;
 				barrelImage.style.display = 'inline';
-barrelImage.onclick = refillFeeder;
+                barrelImage.onclick = refillFeeder;
 				}
             }
           }
