--- a/index.html
+++ b/index.html
@@ -199,11 +199,26 @@
       'FerroRight.png',
       'FerroBlink.png',
       'FerroGold.png',
+	  'FerroGoldBlink.png',
+	  'FerroGoldEatClosed.png',
+	  'FerroGoldEatOpen.png',
+	  'FerroGoldHappy.png',
+	  'FerroGoldLeft.png',
+	  'FerroGoldRight.png',
+	  'FerroBarrel.png',
+	  'FerroBarrelPouring.png',
+	  'FoodBowl.png',
+	  'FoodBowl33.png',
+	  'FoodBowl66.png',
+	  'FoodBowlEmpty.png',
+	  'FoodBowlFull.png',
+	  'Litterbox.png',
       'FerroFeeder.png',
       'FerroFeederFull.png',
       'FerroFeeder66.png',
       'FerroFeeder33.png',
-	  'FerroFeederEmpty.png'
+	  'FerroFeederEmpty.png',
+	  'FerroFeederPouring.png'
     ];
 
     preloadImages.forEach(img => {
