--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       height: auto;
       display: none;
       z-index: 2;
+      transform: rotate(-10deg);
     }
     
 
@@ -259,7 +260,7 @@
       const offsetY = petRect.top - containerRect.top;
 
       partyHat.style.left = `${offsetX + petImage.offsetWidth / 2 - partyHat.offsetWidth / 2}px`;
-      partyHat.style.top = `${offsetY - partyHat.offsetHeight + 10}px`;
+      partyHat.style.top = `${offsetY - partyHat.offsetHeight + 20}px`;
     }
 	
 	
