--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
       const offsetX = petRect.left - containerRect.left;
       const offsetY = petRect.top - containerRect.top;
 
-      partyHat.style.left = `${offsetX + petImage.offsetWidth / 2 - partyHat.offsetWidth / 2}px`;
-      partyHat.style.top = `${offsetY - partyHat.offsetHeight + 30}px`;
+      partyHat.style.left = `${offsetX + petImage.offsetWidth / 2 - partyHat.offsetWidth / 2-10}px`;
+      partyHat.style.top = `${offsetY - partyHat.offsetHeight + 40}px`;
     }
 	
 	
